# Solana-Voting

./: Anchor.toml  Cargo.toml  README.md  package.json
app/: .env.example  .gitignore  config-overrides.js  package-lock.json  package.json  tsconfig.server.json
app/public/: index.html
app/server/: config.ts  index.ts
app/server/idl/: solana_voting.json
app/server/middleware/: errorHandler.ts
app/server/routes/: api.routes.ts
app/server/services/: solana.service.ts
app/src/: App.tsx  index.tsx  polyfills.ts  react-app-env.d.ts  styles.css
app/src/components/: VotingDApp.tsx
app/src/idl/: solana_voting.json
app/src/utils/: anchor.ts
programs/solana_voting/: Cargo.toml
programs/solana_voting/src/: lib.rs
tests/: solana_voting.ts
