[package]
name = "solana-voting"
version = "0.1.0"
description = "Decentralized Voting DApp on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
